# Particles

./: CMakeLists.txt  README.md
glad/: glad.c
include/: cl_particales.h  emuns.h  object.h  scene.h  shader.h
include/glad/: glad.h
shaders/: partical.cl  standart.fs  standart.vs
src/: cl_particales.cpp  main.cpp  object.cpp  scene.cpp  shader.cpp
